@startuml

title __MODEL's Class Diagram__\n

  namespace  {
    namespace odel {
      class Model.Model {
          - addedFileNames : ArrayList<String>
          - allFiles : File[]
          - currentAddress : String
          - deletedFileNames : ArrayList<String>
          - displayFormat : String
          - firsTimeAddressLoad : boolean
          - firstTimeAddress : String
          - flashBackNumber : String
          - initialAddress : String
          - isGridDisplay : boolean
          - loggedFileNames : ArrayList<String>
          - lookAndFeel : String
          - nestFile : File
          - nestPath : String
          - receivedFileAddress : String
          - remoteComputerAddress : String
          - remoteComputerPort : String
          - syncInterval : String
          - syncPath : String
          - tag : String
          + deleteFile()
          + getAllFiles()
          + getCareTaker()
          + getCurrentAddress()
          + getFirstTimeAddress()
          + getFlashBackNumber()
          + getGridDisplay()
          + getInitialAddress()
          + getLookAndFeel()
          + getReceivedFileAddress()
          + getRemoteComputerAddress()
          + getRemoteComputerPort()
          + getSyncInterval()
          + goToParent()
          + initializeWatching()
          + loadSettings()
          + logChanges()
          + newFile()
          + newFolder()
          {static} + pasteFile()
          + renameFile()
          + setAsSynchPath()
          + setCareTaker()
          + setCurrentAddress()
          + setCurrentAddressWithoutCareTakerModification()
          + setFlashBackNumber()
          + setGridDisplay()
          + setInitialAddress()
          + setLookAndFeel()
          + setReceivedFileAddress()
          + setRemoteComputerAddress()
          + setRemoteComputerPort()
          + setSyncInterval()
          + setSyncPath()
          + sync()
          + upgradeFiles()
          + writeSettingsToFile()
          - generateNestFile()
      }
    }
  }
  

  namespace  {
    namespace odel {
      class Model.Model.TransferHandler {
          - host : String
          - identity : String
          - port : int
          - synsFile : File
          - writtenIn : File
          + TransferHandler()
          + run()
      }
    }
  }
  

  Model.Model o-- Memento.CareTaker : careTaker
  Model.Model +-down- Model.Model.TransferHandler
  Model.Model.TransferHandler o-- Client.ReceiverClient : receiverClient
  Model.Model.TransferHandler o-- Client.SenderClient : senderClient


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
